--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=6.2.0"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "author": "Petar",
   "dependencies": {
