--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "node": ">=6.2.0"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "debug": "node --inspect-brk=9229 server.js"
   },
   "author": "Petar",
   "dependencies": {
+    "axios": "^0.19.0",
     "express": "^4.15.3",
+    "redis": "^2.8.0",
     "nodemon": "^1.11.0"
   }
 }
